k8s/00-openfaas-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas
  labels:
    name: openfaas
---
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas-fn
  labels:
    name: openfaas-fn
