k8s/11-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cofrap
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
